FISH-8652: Downgrade byte reading in ChildFirstClassLoaderTest.